--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   path: ^1.8.3
   sqflite: ^2.3.0
   dio: ^5.4.0
+  get: ^4.6.6
+  logger: ^2.0.2+1
+  rive: ^0.12.3
+  shared_preferences: ^2.2.2
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - database/favorite.sqlite
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
